KNOWN BUGS:
* The code sometimes uses timeout_client where it should use a server timeout.
|
20060608a: Changes since 20060428a:
- Bugfix: Make hostname=foo.example.org override broken local DNS
  configuration. Reported by Troy Piggins.
- Documentation: texpire -C now shows angle brackets and quotes around
  the message-ID.

20060428a: Changes since 20060424a:
- Forward port fqdn validation list from upcoming leafnode 1.11.6.

20060424a: Changes since 20060321a:
- Bugfix: re-read group.info or local.groups also if the st_dev field
  changes (because st_dev,st_ino uniquely identify files, rather than
  st_ino alone).
- Bugfix: changes to local.groups or active file are now listed in
  newnews and newgroups immediately, not just after some commands (such
  as LIST) or a server restart.
- Feature: differentiate between "cannot connect" and "timeout
  connecting".

20060321a: Changes since 20051115a:
- Feature: if group names are mentioned on the texpire command line
  (which must not contain -C), expire only said groups.
- Documentation: corrected rsync instructions in the FAQ.

20051115a: Changes since 20051113a:
- Change: let rnews call itself just "rnews" rather than echoing its
  path, for consistency with other programs.  Patch by Niels Baggesen.
- Documentation: Ship pre-built FAQ.pdf in the tarball.
- Bugfix: RPM build was broken after FAQ revision. Reported by Attila H.
- Bugfix: When an article (control article for instance) is not stored
  because it has no valid groups, properly read and discard message
  body. Reported by Patric Mueller.
- FAQ: rsync must be used with -H option (not -L).

20051113a: Changes since 20050914a:
- Bugfix: parse NEWNEWS and NEWGROUPS command properly.
  Patch by Niels Baggesen.
- Documentation: Revise FAQ (now in HTML and PDF formats), add information
  about copying the spool.
- Documentation: remove dontpost from manual page, no longer supported.
  (Users should use feedtype=none instead.) Found by Roi Dayan.