@@ -87,7 +87,7 @@ main(int argc, char *argv[])
     char *conffile = NULL;
 
     ln_log_open(myname);
-    if (!initvars(argv[0]))
+    if (!initvars(argv[0], 0))
 	init_failed(myname);
     while ((option = getopt(argc, argv, GLOBALOPTS)) != -1) {
 	if (!parseopt(myname, option, optarg, &conffile)) {
@@ -107,7 +107,7 @@ main(int argc, char *argv[])
     if (conffile)
 	free(conffile);
 
-    if (!init_post(0))
+    if (!init_post())
 	init_failed(myname);
 
     umask((mode_t)07);
