@@ -112,7 +112,7 @@ whoami(void)
  */
 /*@-globstate@*/
 int
-initvars(const char *const progname)
+initvars(const char *const progname, int logtostdout)
 {
     mode_t oum;
 
@@ -124,6 +124,7 @@ initvars(const char *const progname)
     (void)umask((mode_t)07 | oum);
 
     whoami();
+    validatefqdn(logtostdout);
 
     /* spooldir may be changed later by parseopt: */
     spooldir = critstrdup(def_spooldir, "initvars");
@@ -141,13 +142,11 @@ init_failed(const char *progname) {
 }
 
 int
-init_post(int logtostdout) {
+init_post(void) {
     uid_t ui;
     gid_t gi;
     struct mydir const *md = &dirs[0];
     mastr *l = mastr_new(LN_PATH_MAX);
-
-    validatefqdn(logtostdout);
 
     mastr_vcat(l, spooldir, "/leaf.node/lock.file", NULL);
     lockfile=critstrdup(mastr_str(l), "init_post");
